# 2022-GMTK-Gamejam

./: CMakeLists.txt  README.md
src/: global.h  main.cpp  pch.h
src/Timer/: Timer.cpp  Timer.h
